k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-ui
  template:
    metadata:
      labels:
        app: patient-ui
    spec:
      containers:
        - name: patient-ui
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: patient-ui-config-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: patient-ui-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: patient-ui-config-volume
          configMap:
            name: patient-ui-config
