k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: patient-api-service  #numele service-ului /receptiei

spec:
  selector:
    app: patient-api  #service cauta pod-urile ce au aceasta eticheta

  ports:
  - port: 8000  #portul oferit de service
    targetPort: 8000  #portul din containerul python
