k8s/sql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: patient-db-service

spec:
  selector:
    app: patient-db

  ports:
  - port: 1433
    targetPort: 1433
