k8s/ui-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: patient-ui-service

spec:
  selector:
    app: patient-ui

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
